# openproject-codex-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.agents/plugins/plugins/openproject-codex/.codex-plugin/: plugin.json
.agents/plugins/plugins/openproject-codex/scripts/: openproject_mcp.py  run_openproject_mcp.py
.agents/plugins/plugins/openproject-codex/scripts/mcp/: __init__.py
.agents/plugins/plugins/openproject-codex/scripts/mcp/server/: __init__.py  fastmcp.py
.codex-plugin/: plugin.json
.github/workflows/: hol-plugin-scanner.yml
docs/: LAUNCH.md  RELEASE_NOTES_v0.1.0.md
plugins/openproject-codex/: .mcp.json
plugins/openproject-codex/.codex-plugin/: plugin.json
plugins/openproject-codex/skills/openproject-codex/: SKILL.md
scripts/: httpx.py  make_demo_gif.py  openproject_mcp.py  smoke_test.py
skills/openproject-codex/: SKILL.md
